fixed spacing in menu and removed description -

--- a/src/accordion/styles.css
+++ b/src/accordion/styles.css
@@ -1,31 +1,25 @@
 .accordion-container {
-  margin: 0;
-  padding: 0;
-  font: Montserrat, sans-serif;
-  font-family: Montserrat, sans-serif;
-  border: 1px solid blue;
+  width: 95%;
+  height: auto;
 }
 
 .accordion-item-container {
   display: grid;
-  grid-template-columns: 15fr 30fr 7fr;
+  grid-template-columns: 9fr 1fr;
   align-items: center;
-  font-size: 3vh;
-  border: 1px solid black;
+  line-height: 0px;
 }
 
 .accordion-dropdown-container {
   display: grid;
-  grid-template-columns: 3fr 15fr 30fr;
+  grid-template-columns: 1fr 9fr;
   align-items: center;
-  font-size: 3vh;
-  border: 1px solid green;
+  line-height: 0px;
 }
 
 .accordion-dropdown-text {
   place-self: start;
   color: black;
-  border: 1px solid red;
 }
 
 .accordion-button {
